; ModuleID = '/home/carl/AnghaBench/esp-idf/components/driver/test/esp32/extr_test_pwm.c_carrier_with_set_function_test.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/driver/test/esp32/extr_test_pwm.c_carrier_with_set_function_test.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@portTICK_RATE_MS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32, i32, i32, i32, i32, i32, i32)* @carrier_with_set_function_test to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @carrier_with_set_function_test(i32 %0, i32 %1, i32 %2, i32 %3, i32 %4, i32 %5, i32 %6, i32 %7) #0 {
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  store i32 %0, i32* %9, align 4
  store i32 %1, i32* %10, align 4
  store i32 %2, i32* %11, align 4
  store i32 %3, i32* %12, align 4
  store i32 %4, i32* %13, align 4
  store i32 %5, i32* %14, align 4
  store i32 %6, i32* %15, align 4
  store i32 %7, i32* %16, align 4
  %17 = load i32, i32* %9, align 4
  %18 = load i32, i32* %10, align 4
  %19 = load i32, i32* %11, align 4
  %20 = load i32, i32* %12, align 4
  %21 = call i32 @mcpwm_basic_config(i32 %17, i32 %18, i32 %19, i32 %20)
  %22 = load i32, i32* %9, align 4
  %23 = load i32, i32* %12, align 4
  %24 = call i32 @mcpwm_carrier_enable(i32 %22, i32 %23)
  %25 = call i32 @TEST_ESP_OK(i32 %24)
  %26 = load i32, i32* %9, align 4
  %27 = load i32, i32* %12, align 4
  %28 = load i32, i32* %14, align 4
  %29 = call i32 @mcpwm_carrier_set_period(i32 %26, i32 %27, i32 %28)
  %30 = call i32 @TEST_ESP_OK(i32 %29)
  %31 = load i32, i32* %9, align 4
  %32 = load i32, i32* %12, align 4
  %33 = load i32, i32* %15, align 4
  %34 = call i32 @mcpwm_carrier_set_duty_cycle(i32 %31, i32 %32, i32 %33)
  %35 = call i32 @TEST_ESP_OK(i32 %34)
  %36 = call i32 @judge_count_value(i32 500, i32 8928)
  %37 = load i32, i32* %9, align 4
  %38 = load i32, i32* %12, align 4
  %39 = load i32, i32* %13, align 4
  %40 = call i32 @mcpwm_carrier_output_invert(i32 %37, i32 %38, i32 %39)
  %41 = call i32 @TEST_ESP_OK(i32 %40)
  %42 = load i32, i32* @portTICK_RATE_MS, align 4
  %43 = sdiv i32 2000, %42
  %44 = call i32 @vTaskDelay(i32 %43)
  ret void
}

declare dso_local i32 @mcpwm_basic_config(i32, i32, i32, i32) #1

declare dso_local i32 @TEST_ESP_OK(i32) #1

declare dso_local i32 @mcpwm_carrier_enable(i32, i32) #1

declare dso_local i32 @mcpwm_carrier_set_period(i32, i32, i32) #1

declare dso_local i32 @mcpwm_carrier_set_duty_cycle(i32, i32, i32) #1

declare dso_local i32 @judge_count_value(i32, i32) #1

declare dso_local i32 @mcpwm_carrier_output_invert(i32, i32, i32) #1

declare dso_local i32 @vTaskDelay(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
